force-app/main/default/objects/pstar__Action__c/fields/pstar__Action_api_name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Action_api_name__c</fullName>
    <label>Action api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>