force-app/main/default/objects/pstar__Action__c/fields/pstar__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Workflow Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>