force-app/main/default/objects/pstar__Action__c/fields/pstar__Active_Workflow__c.field-meta.xml
<CustomField>
    <fullName>pstar__Active_Workflow__c</fullName>
    <formula>pstar__Workflow__r.pstar__Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Workflow</label>
    <type>Checkbox</type>
</CustomField>