force-app/main/default/objects/pstar__Action__c/fields/pstar__Add_Eval_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Add_Eval_Date__c</fullName>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>