force-app/main/default/objects/pstar__Action__c/fields/pstar__Admission_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>pstar__Admission_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>