force-app/main/default/objects/pstar__Action__c/fields/pstar__Auth_Hours_Weekly__c.field-meta.xml
<CustomField>
    <fullName>pstar__Auth_Hours_Weekly__c</fullName>
    <label>Auth. Hours (Weekly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>