force-app/main/default/objects/pstar__Action__c/fields/pstar__Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>pstar__Authorization_Number__c</fullName>
    <label>Authorization Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>