force-app/main/default/objects/pstar__Action__c/fields/pstar__Authorization_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Authorization_Received_Date__c</fullName>
    <label>Authorization Received Date</label>
    <type>Date</type>
</CustomField>