force-app/main/default/objects/pstar__Action__c/fields/pstar__Complete__c.field-meta.xml
<CustomField>
    <fullName>pstar__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>