force-app/main/default/objects/pstar__Action__c/fields/pstar__Config_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>pstar__Config_Action_Id__c</fullName>
    <label>Config_Action Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>