force-app/main/default/objects/pstar__Action__c/fields/pstar__Config_Workflow__c.field-meta.xml
<CustomField>
    <fullName>pstar__Config_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config_Workflow</label>
    <referenceTo>pstar__Config_Workflow__c</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>