force-app/main/default/objects/pstar__Action__c/fields/pstar__Confirm_Client_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>pstar__Confirm_Client_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Client Call Complete</label>
    <type>Checkbox</type>
</CustomField>