force-app/main/default/objects/pstar__Action__c/fields/pstar__Confirm_Eligibility_Proofs_in_Credible__c.field-meta.xml
<CustomField>
    <fullName>pstar__Confirm_Eligibility_Proofs_in_Credible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Eligibility Proofs in Credible</label>
    <type>Checkbox</type>
</CustomField>