force-app/main/default/objects/pstar__Action__c/fields/pstar__Credible_Profile__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Profile__c</fullName>
    <label>Credible Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>