force-app/main/default/objects/pstar__Action__c/fields/pstar__Credible_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>pstar__Credible_Profile_Link__c</fullName>
    <formula>IF(
  ISBLANK(pstar__Credible_Profile_ID__c),
  "Please Enter Credible Profile ID",
  HYPERLINK(
    "https://www.cbh3.crediblebh.com/client/my_cw_clients.asp?client_id=" &amp; pstar__Credible_Profile_ID__c,
    "Open Credible Profile",
    "_blank"
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credible Profile Link</label>
    <type>Text</type>
</CustomField>