force-app/main/default/objects/pstar__Action__c/fields/pstar__Description__c.field-meta.xml
<CustomField>
    <fullName>pstar__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>