force-app/main/default/objects/pstar__Action__c/fields/pstar__Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>pstar__Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>80</length>
    <type>Text</type>
</CustomField>