force-app/main/default/objects/pstar__Action__c/fields/pstar__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>