force-app/main/default/objects/pstar__Action__c/fields/pstar__Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>pstar__Evaluation_Status__c</fullName>
    <label>Evaluation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>