force-app/main/default/objects/pstar__Action__c/fields/pstar__Insurance_Issue__c.field-meta.xml
<CustomField>
    <fullName>pstar__Insurance_Issue__c</fullName>
    <label>Insurance Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Coverage under a different county than Peer residence</fullName>
            </value>
            <value>
                <fullName>EPOMS Only Medicaid Coverage</fullName>
            </value>
            <value>
                <fullName>HCB15 Family Planning Only Coverage</fullName>
            </value>
            <value>
                <fullName>HCB09 Medicare Cost Sharing Only Coverage</fullName>
            </value>
            <value>
                <fullName>Senior Life Enrollment/Insurance Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>