force-app/main/default/objects/pstar__Action__c/fields/pstar__IRP_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__IRP_Completion_Date__c</fullName>
    <label>IRP Completion Date</label>
    <type>Date</type>
</CustomField>