force-app/main/default/objects/pstar__Action__c/fields/pstar__IRP_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>pstar__IRP_Scheduled__c</fullName>
    <label>IRP Scheduled Date</label>
    <type>Date</type>
</CustomField>