force-app/main/default/objects/pstar__Action__c/fields/pstar__IRP_Specialist__c.field-meta.xml
<CustomField>
    <fullName>pstar__IRP_Specialist__c</fullName>
    <label>IRP Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>