force-app/main/default/objects/pstar__Action__c/fields/pstar__IRP_Specialist_Picklist__c.field-meta.xml
<CustomField>
    <fullName>pstar__IRP_Specialist_Picklist__c</fullName>
    <label>IRP Specialist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned IRP</fullName>
                <default>true</default>
                <label>Unassigned IRP</label>
            </value>
            <value>
                <fullName>Vicky Rumbaugh (A)</fullName>
            </value>
            <value>
                <fullName>Phillip Brougher (B)</fullName>
            </value>
            <value>
                <fullName>Amy Zavaglia (F)</fullName>
            </value>
            <value>
                <fullName>Amy Boring (G)</fullName>
            </value>
            <value>
                <fullName>Pamela Townsend (H)</fullName>
            </value>
            <value>
                <fullName>Bryan Corbin (I)</fullName>
            </value>
            <value>
                <fullName>Shanika Winds (J)</fullName>
            </value>
            <value>
                <fullName>Joanna Welch(A)</fullName>
            </value>
            <value>
                <fullName>Naeem Langston(D)</fullName>
            </value>
            <value>
                <fullName>Conor Cox(D)</fullName>
            </value>
            <value>
                <fullName>Floyd Sears(H - Part Time)</fullName>
            </value>
            <value>
                <fullName>Harley Youngblood (H - Part Time)</fullName>
            </value>
            <value>
                <fullName>Wendy Flowers (H - Part Time)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>