force-app/main/default/objects/pstar__Action__c/fields/pstar__Is_action_opened__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_action_opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is action opened</label>
    <type>Checkbox</type>
</CustomField>