force-app/main/default/objects/pstar__Action__c/fields/pstar__Is_Manual_Action__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_Manual_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Action</label>
    <type>Checkbox</type>
</CustomField>