force-app/main/default/objects/pstar__Action__c/fields/pstar__Last_Contact_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>pstar__Last_Contact_Date_Formula__c</fullName>
    <formula>pstar__Last_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>