force-app/main/default/objects/pstar__Action__c/fields/pstar__Last_Contact_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>pstar__Last_Contact_Status_Formula__c</fullName>
    <formula>TEXT(pstar__Last_Contact_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Status</label>
    <type>Text</type>
</CustomField>