force-app/main/default/objects/pstar__Action__c/fields/pstar__Location_of_IRP__c.field-meta.xml
<CustomField>
    <fullName>pstar__Location_of_IRP__c</fullName>
    <label>Location of IRP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>