force-app/main/default/objects/pstar__Action__c/fields/pstar__MA_ID__c.field-meta.xml
<CustomField>
    <fullName>pstar__MA_ID__c</fullName>
    <label>MA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>