force-app/main/default/objects/pstar__Action__c/fields/pstar__Marked_Completed_During_Migration__c.field-meta.xml
<CustomField>
    <fullName>pstar__Marked_Completed_During_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked Completed During Migration</label>
    <type>Checkbox</type>
</CustomField>