force-app/main/default/objects/pstar__Action__c/fields/pstar__Must_Start_By__c.field-meta.xml
<CustomField>
    <fullName>pstar__Must_Start_By__c</fullName>
    <label>Must Start By</label>
    <type>Date</type>
</CustomField>