force-app/main/default/objects/pstar__Action__c/fields/pstar__Notes__c.field-meta.xml
<CustomField>
    <fullName>pstar__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>