force-app/main/default/objects/pstar__Action__c/fields/pstar__NPI_Verification__c.field-meta.xml
<CustomField>
    <fullName>pstar__NPI_Verification__c</fullName>
    <label>NPI Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Failed Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>