force-app/main/default/objects/pstar__Action__c/fields/pstar__NPI_Verified__c.field-meta.xml
<CustomField>
    <fullName>pstar__NPI_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPI Verified</label>
    <type>Checkbox</type>
</CustomField>