force-app/main/default/objects/pstar__Action__c/fields/pstar__Open_to_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>pstar__Open_to_Evaluation__c</fullName>
    <inlineHelpText>Ask client if he is open for us doing evaluation</inlineHelpText>
    <label>Open to Evaluation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No - Not Required</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>