force-app/main/default/objects/pstar__Action__c/fields/pstar__Preference_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>pstar__Preference_Link_Token__c</fullName>
    <label>Preference Link Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>