force-app/main/default/objects/pstar__Action__c/fields/pstar__Preference_Link_Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Preference_Link_Token_Expiry_Date__c</fullName>
    <label>Preference Link Token Expiry Date</label>
    <type>Date</type>
</CustomField>