force-app/main/default/objects/pstar__Action__c/fields/pstar__Previously_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>pstar__Previously_Diagnosed__c</fullName>
    <inlineHelpText>Ask the client: Have you been diagnosed before?</inlineHelpText>
    <label>Previously Diagnosed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>