force-app/main/default/objects/pstar__Action__c/fields/pstar__Reason_For_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>pstar__Reason_For_Contact_c__c</fullName>
    <label>Reason_For_Contact__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>