force-app/main/default/objects/pstar__Action__c/fields/pstar__Referral__c.field-meta.xml
<CustomField>
    <fullName>pstar__Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Workflow Tasks</relationshipLabel>
    <relationshipName>Workflow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>