force-app/main/default/objects/pstar__Action__c/fields/pstar__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>pstar__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>