force-app/main/default/objects/pstar__Action__c/fields/pstar__Script_Uploaded_to_Credible__c.field-meta.xml
<CustomField>
    <fullName>pstar__Script_Uploaded_to_Credible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Script Uploaded to Credible</label>
    <type>Checkbox</type>
</CustomField>