force-app/main/default/objects/pstar__Action__c/fields/pstar__Status__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>