force-app/main/default/objects/pstar__Action__c/fields/pstar__Status_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status_Completed_Date__c</fullName>
    <label>Status Completed Date</label>
    <type>DateTime</type>
</CustomField>