force-app/main/default/objects/pstar__Action__c/fields/pstar__Status_Completion_Duration__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status_Completion_Duration__c</fullName>
    <inlineHelpText>This field is calculated in hours.</inlineHelpText>
    <label>Status Completion Duration</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>