force-app/main/default/objects/pstar__Action__c/fields/pstar__Workflow__c.field-meta.xml
<CustomField>
    <fullName>pstar__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow</label>
    <referenceTo>pstar__Workflow__c</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>