force-app/main/default/objects/pstar__Action__c/validationRules/MA_ID_should_be_number_only.validationRule-meta.xml
<ValidationRule>
    <fullName>MA_ID_should_be_number_only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(MA_ID__c, &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>MA_ID__c</errorDisplayField>
    <errorMessage>MA ID must contain numbers only.</errorMessage>
</ValidationRule>