force-app/main/default/objects/pstar__Action__c/validationRules/pstar__Prevent_Owner_Change_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>pstar__Prevent_Owner_Change_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    pstar__Status__c = "Complete",
    ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>You cannot change the Owner once the status is marked as Complete.</errorMessage>
</ValidationRule>